# BE/Laravel/app/Models/User.php
@@ -32,7 +32,7 @@ class User extends Authenticatable implements JWTSubject
         return 'PixelPalette_user';
     }
     public function getInformationUser($id){
-        return $this->where('Id', $id)->latest()->first('Id','UserName', 'FirstName', 'LastName', 'Email', 'Country');
+        return $this->where('Id', $id)-> select('Id','UserName', 'FirstName', 'LastName', 'Email', 'Country')->get();
     }
 }
 
